--- a/PPStudyClient-WallDispay1/MainWindow.xaml
+++ b/PPStudyClient-WallDispay1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PPStudyClient_WallDisplay.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Closed="Window_Closed" Background="#FFDEDEDE">
+        Title="MainWindow" Closed="Window_Closed" Background="#FF3B5E7E">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="233*"/>
@@ -12,7 +12,7 @@
             <RowDefinition Height="71*"/>
             <RowDefinition Height="181*"/>
         </Grid.RowDefinitions>
-        <Label x:Name="header_label" Content="Wall Display 1" HorizontalAlignment="Center" VerticalAlignment="Top" Height="59" Width="250" FontWeight="Bold" FontSize="36" BorderBrush="Black" Grid.Row="0" Grid.Column="1"/>
+        <Label x:Name="header_label" Content="Wall Display" HorizontalAlignment="Center" VerticalAlignment="Top" Height="59" Width="250" FontWeight="Bold" FontSize="36" BorderBrush="Black" Grid.Row="0" Grid.Column="1"/>
         <Image Name="image" HorizontalAlignment="Center" Height="150" VerticalAlignment="Top" Width="150" Grid.ColumnSpan="2"  Grid.Row="1"/>
 
     </Grid>
